--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
         <version>2.25.0</version>
     </dependency>
     <dependency>
+    <groupId>net.masterthought</groupId>
+    <artifactId>cucumber-reporting</artifactId>
+    <version>5.8.4</version>
+</dependency>
+    <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
         <version>2.25.0</version>
