ran 4 successful scenarios in firefox

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
-browser=chrome
-testurl=http://dsportalapp.herokuapp.com/home
+browser=firefox
+testurl=https://dsportalapp.herokuapp.com/home
 username=ninjalinos@work.com	
 password=sdet218920@
