--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
         <version>2.25.0</version>
     </dependency>
     <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.4.1</version>
+</dependency>
+    
+    <dependency>
         <groupId>io.github.bonigarcia</groupId>
         <artifactId>webdrivermanager</artifactId>
         <version>6.1.0</version>
