--- a/.classpath
+++ b/.classpath
@@ -29,5 +29,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="/project1"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
