--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,13 @@
 			<artifactId>webdrivermanager</artifactId>
 			<version>6.1.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>7.23.0</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 </project>
