--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<version>7.23.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>7.23.0</version>
+		</dependency>
 		
 	</dependencies>
 </project>
