--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
-browser=firefox
+browser=chrome
 testurl=https://dsportalapp.herokuapp.com/home
 username=ninjalinos@work.com	
 password=sdet218920@
