--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,5 @@
-browser=chrome
+browser=firefox
 testurl=https://dsportalapp.herokuapp.com/home
+headless=true
 username=ninjalinos@work.com	
 password=sdet218920@
