--- a/src/test/resources/Log4j2.properties
+++ b/src/test/resources/Log4j2.properties
@@ -1,19 +1,25 @@
-#Declare loggers
-status = error
-name= PropertiesConfig
-appenders=console, file
-rootLogger.level= info
-rootLogger.appenderRefs=ref_stdout,ref_logfile
-rootLogger.appenderRef.ref_stdout.ref=STDOUT
-rootLogger.appenderRef.ref_logfile.ref=LOGFILE
-# Direct log messages to Console
+# Set internal Log4j logging level
+status = debug
+name = PropertiesConfig
+
+# Define the appenders
+appenders = console, file
+
+# Root logger setup
+rootLogger.level = info
+rootLogger.appenderRefs = stdout, logfile
+rootLogger.appenderRef.stdout.ref = STDOUT
+rootLogger.appenderRef.logfile.ref = LOGFILE
+
+# Console appender config
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern=[%-5level]%d{yyyy-MM-ddHH:mm:ss.SSS}[%t]%c{1]-%msg%n
-# Direct log messages to a log file
+appender.console.layout.pattern = [%level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+
+# File appender config
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName=logs/Mylog4j-log.log
-appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=[%-5level]%d{yyyy-MM-ddHH:mm:ss.SSS}[%t]%c{1)-%msg%n
+appender.file.fileName = logs/Mylog4j-log.log
+appender.file.layout.type = PatternLayout
+appender.file.layout.pattern = [%level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
