reading data from excel and credentials from excel

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,5 +1,4 @@
-browser=firefox
+browser=chrome
 testurl=https://dsportalapp.herokuapp.com/home
 headless=true
-username=ninjalinos@work.com	
-password=sdet218920@
+path=C:\\Users\\HP\\git\\dsalgo_ninjalinos-BDD\\src\\test\\resources\\testdata\\testData.xlsx
