--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
-browser=chrome
+browser=firefox
 testurl=https://dsportalapp.herokuapp.com/home
 headless=true
 path=C:\\Users\\HP\\git\\dsalgo_ninjalinos-BDD\\src\\test\\resources\\testdata\\testData.xlsx
