used excel reader to read credentials and try editor page data and ran successfully all 85 scenarios in chrome and firefox

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,3 +1,4 @@
-browser=FIREFOX
+browser=firefox
 headless=true
-testurl=http://dsportalapp.herokuapp.com/home
+testurl=https://dsportalapp.herokuapp.com
+path=/Users/arpitgupta/git/dsalgo_ninjalinos-BDD/src/test/resources/testdata/testData.xlsx
