Completed Graph and Tree module with all excel, config and pico.

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,2 +1,6 @@
-browser=firefox
-url=https://dsportalapp.herokuapp.com
+browser=chrome
+testurl=https://dsportalapp.herokuapp.com
+headless=false
+username=ninjalinos@work.com	
+password=sdet218920@
+path=C:\\Users\\link2\\git\\dsalgo_ninjalinos-BDD\\src\\test\\resources\\testdata\\testData.xlsx
