--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
-browser=FIREFOX
-headless=true
+browser=CHROME
+headless=false
 testurl=https://dsportalapp.herokuapp.com
 path=/Users/arpitgupta/git/dsalgo_ninjalinos-BDD/src/test/resources/testdata/testData.xlsx
