--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,6 +1,6 @@
-browser=chrome
+browser=firefox
 testurl=https://dsportalapp.herokuapp.com
-headless=false
+headless=true
 username=ninjalinos@work.com	
 password=sdet218920@
 path=C:\\Users\\link2\\git\\dsalgo_ninjalinos-BDD\\src\\test\\resources\\testdata\\testData.xlsx
