--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,2 +1,4 @@
 browser=chrome
-testurl=http://dsportalapp.herokuapp.com/home
+testurl=https://dsportalapp.herokuapp.com
+headless=false
+path=C:\\Users\\rahul\\git\\dsalgo_ninjalinos-BDD\\src\\test\\resources\\testdata\\testData.xlsx
