--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
-browser=FIREFOX
+browser=CHROME
 headless=true
 testurl=https://dsportalapp.herokuapp.com
 path=/Users/arpitgupta/git/dsalgo_ninjalinos-BDD/src/test/resources/testdata/testData.xlsx
