--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
 browser=chrome
 testurl=https://dsportalapp.herokuapp.com
-headless=true
+headless=false
 path=C:\\Users\\rahul\\git\\dsalgo_ninjalinos-BDD\\src\\test\\resources\\testdata\\testData.xlsx
