--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
 browser=chrome
 testurl=https://dsportalapp.herokuapp.com
 headless=true
-path=C:\\Users\\link2\\git\\dsalgo_ninjalinos-BDD\\src\\test\\resources\\testdata\\testData.xlsx
+path=src//test//resources//testdata//testData.xlsx
