changed headless to true and parallel to true

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,4 +1,4 @@
 browser=chrome
 testurl=https://dsportalapp.herokuapp.com
-headless=false
+headless=true
 path=src//test//resources//testdata//testData.xlsx
